feature: UserResponse 추가된 필드 값 할당